test(calendar): verify series reconciliation rollback